tmp-dev-full/objects/PointUploadResult__c/PointUploadResult__c.object-meta.xml
<CustomObject>
    <label>Point Upload Result</label>
    <nameField>
        <displayFormat>PUR-{000000}</displayFormat>
        <label>Point Upload Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>