tmp-dev-full/objects/PointUploadResult__c/fields/ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>ErrorReason__c</fullName>
    <label>Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>