tmp-dev-full/objects/PointUploadResult__c/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>