tmp-dev-full/objects/PointUploadResult__c/fields/LoyaltyProgramMemberId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProgramMemberId__c</fullName>
    <label>Loyalty Program Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>