tmp-dev-full/objects/PointUploadResult__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <label>Member No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>