tmp-dev-full/objects/PointUploadResult__c/fields/PointUploadJob__c.field-meta.xml
<CustomField>
    <fullName>PointUploadJob__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Point Upload Job</label>
    <referenceTo>PointUploadJob__c</referenceTo>
    <relationshipLabel>Point Upload Results</relationshipLabel>
    <relationshipName>PointUploadResults</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>